@@ -322,6 +322,13 @@ adapi_process_rr(zone_type* zone, ldns_rr* rr, int add, int backup)
     }
     /* //MaxZoneTTL. Only set for RRtype != SOA && RRtype != DNSKEY */
     if (tmp && tmp < ldns_rr_ttl(rr)) {
+        /* YBS: NOTICE! We are correcting the TTLs here. While
+         * this works it is **NOT** the correct place to do so. We SHOULD
+         * only correcting the records for the outgoing zone (so only
+         * correct them while signing). However, the datastructure currently
+         * in use can not make a distinction between incoming and outgoing.
+         * As a result IXFR's might fail when trying to remove a record
+         * that has its TTL fixed. */
         char* str = ldns_rdf2str(ldns_rr_owner(rr));
         if (str) {
             size_t i = 0;
